--- a/style.css
+++ b/style.css
@@ -1,23 +1,237 @@
- #name {
-	color: red;
-	font-style: 
-	margin-top:100px;
+/*font-family: 'Playfair Display', serif;
+font-family: 'Raleway', sans-serif;*/
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
-
-
-
-div {
-	padding: 20px;
-    background-color: #FFF0F5;
-  }
-
-  .nav>li>a {
-  position: relative;
-  display: block;
-  padding: 10px 15px;
-}
-.navbar-nav>li {
-  float: left;
+/* GLOBAL */
+body {
+	font-family: 'Raleway', sans-serif;
+	margin: 0;
+	padding: 0;
+	color: black;
+	background: white;
+	height: 100%;
 }
 
+a {
+	text-decoration: none;
+	color: pink;
+	font-weight: 700;
+}
+
+a:hover {
+	color: darkgrey;
+}
+
+hr {
+	max-width: 840px;
+}
+
+.row {
+	margin: 0px 0px 40px 0px;
+	overflow: hidden;
+}
+
+.row h3:first-of-type {
+	font-size: 20px;
+}
+
+.col-narrow {
+	width: 30%;
+	margin: 0;
+	float: left;
+	padding: 0px 10px;
+}
+
+img {
+	max-width: 100%;
+}
+
+.col-wide {
+	width: 70%;
+	margin: 0;
+	float: left;
+	padding: 0px 10px;
+}
+
+.description {
+	text-align: justify;
+	font-size: 0.9em;
+	padding: 0 20px;
+}
+
+.thirds {
+	text-align: center;
+}
+
+.thirds img {
+	width: 32%;
+}
+
+.inline {
+	display: inline-block;
+	text-align: left;
+}
+
+div .small {
+	text-align: left;
+	font-size: 10px;
+	letter-spacing: 2px;
+}
+
+/* NAV */
+nav {
+	position: fixed;
+	background: white;
+	width: 100%;
+	text-align: center;
+	z-index: 100;
+}
+
+nav a {
+	color: pink;
+	padding: 5px;
+	margin: 5px 30px;
+	display: inline-block;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	font-weight: 700;
+}
+
+nav #active {
+	color: black;
+}
+
+/* MAIN */
+main {
+	padding: 75px 15px;
+	opacity: 0;
+	animation: fadein 1s;
+	animation-fill-mode: forwards;
+}
+
+.headline {
+	position: absolute;
+	padding: 25px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	font-size: 96px;
+	font-weight: 700;
+	opacity: 0;
+	animation: fadein 2s;
+	animation-delay: .5s;
+	animation-fill-mode: forwards;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+.fixed-bottom {
+	position: fixed;
+}
+
+section {
+	padding: 20px 10px 20px 10px;
+	max-width: 840px;
+	margin: 0 auto;
+	line-height: 1.25;
+	overflow: hidden;
+}
+
+section h1 {
+	font-family: 'Playfair Display', serif;
+	margin: 0;
+	padding-bottom: 25px;
+}
+
+section h3, section h4 , section ul {
+	margin: 0px;
+}
+
+section h3 + p, section h4 + p {
+	margin: 5px 0px;
+}
+
+section p {
+	margin: 15px 0px;
+	text-align: justify;
+}
+
+/* CONTACT */
+.link-box {
+	border: 2px solid pink;
+	padding: 7px;
+	letter-spacing: 2px;
+	border-radius: 7px;
+	display: inline-block;
+}
+
+.link-box:hover {
+	color: darkgrey;
+	border: 2px solid darkgrey;
+}
+
+.contact li {
+	list-style-type: none;
+	padding: 5px 0px;
+}
+
+.contact .fa {
+	color: darkgrey;
+	font-size: 20px;
+	margin-right: 30px;
+}
+
+/* FOOTER */
+footer {
+	bottom: 0;
+	padding-bottom: 25px;
+	text-align: center;
+	width: 100%;
+}
+
+footer ul, footer li, footer p{
+	list-style-type: none;
+    margin: 0;
+    padding: 0px 10px;
+    display: inline-block;
+}
+
+@media (max-width: 839px) {
+	nav a {
+		margin: 5px 15px;
+	}
+}
+
+/*nav menu*/
+@media (max-width: 639px) {
+	.contact {
+		padding-left: 0;
+	}
+}
+
+@media (max-width: 410px) {
+	main {
+		padding: 100px 15px 30px 15px;
+	}
+
+	.contact .fa {
+		margin-right: 20px;
+	}
+
+	.contact a {
+		font-size: 12px;
+	}
+
+	.col-wide, .col-narrow {
+		width: 100%;
+	}
+}
