--- a/style.css
+++ b/style.css
@@ -32,31 +32,9 @@ hr {
 	max-width: 840px;
 }
 
-.row {
-	margin: 0px 0px 40px 0px;
-	overflow: hidden;
-}
-
-.row h3:first-of-type {
-	font-size: 20px;
-}
-
-.col-narrow {
-	width: 30%;
-	margin: 0;
-	float: left;
-	padding: 0px 10px;
-}
 
 img {
 	max-width: 100%;
-}
-
-.col-wide {
-	width: 70%;
-	margin: 0;
-	float: left;
-	padding: 0px 10px;
 }
 
 .description {
@@ -243,3 +221,15 @@ footer ul, footer li, footer p{
 		width: 100%;
 	}
 }
+
+.about_image{
+  padding-right: 20px;
+}
+
+.about_image2{
+  padding-left: 20px;
+}
+
+
+
+
